Fix text-align on Read More link

--- a/src/layouts/base.less
+++ b/src/layouts/base.less
@@ -267,6 +267,7 @@ article.article--preview .article--preview__footer .tags__tag {
 }
 
 article.article--preview .article--preview__read-more {
+  text-align: right;
   margin-left: auto;
   white-space: nowrap;
 }
